Fix image overflow

--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ a:hover {
     }
 
     img {
-	max-width: 1280px;
+	max-width: 100%;
 	max-height: 80vh;
 	margin: 2rem 0;
     }
